Fixes overflow for main container

--- a/Atividade 4/style.css
+++ b/Atividade 4/style.css
@@ -26,8 +26,9 @@ body {
     background-image: url(./assets/image.jpg);
     height: 100vh;
     width: 100vw;
+    padding-bottom: 30px;
     object-fit: cover;
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -48,7 +49,6 @@ h3 {
     margin-top: 1.5em;
     padding: 20px 10px;
     width: 600px;
-    height: 80%;
     background-color: #211e62;
     border-radius: 5px;
     box-shadow: 0px 0px 1px #3f60dc, 0px -1px 1px #3f60dc;
